Added in messaging for OfferPriceData

--- a/admin/broadleaf-open-admin-platform/src/main/resources/messages/GeneratedMessagesEntityFramework.properties
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/messages/GeneratedMessagesEntityFramework.properties
@@ -161,6 +161,8 @@ OfferImpl_Item_Target_Rule=Can the target item participate in any additional off
 OfferImpl_Requires_Related_Target_And_Qualifiers=Should target items be related?
 OfferImpl_Offer_Adjustment_Type=Offer Adjustment Type
 OfferImpl_Offer_Adjustment_Type_tooltip=This determines at what point in time the offer should be applied to it's corresponding entity.
+OfferImpl_Use_List_For_Discounts=Do you have a fixed list of price discounts?
+OfferImpl_Offer_Price_Data=Fixed Price Discounts
 OfferImpl_ShouldBeRelated=Should these items be related?
 OfferImpl_Treat_As_New_Format=Treat As New Format
 OfferImpl_Time_Zone=What Time Zone Does This Apply To?
@@ -174,6 +176,16 @@ OfferImpl_Shipping_Offer_Combinable=Can be used with shipping offers?
 OfferImplCombinableWithShippingOffers_tooltip=
 OfferImpl_Stackable=Can this offer be stacked with other offers?
 OfferImpl_Stackable_tooltip=If offers are "stackable", then a single order item can receive discounts from multiple offers.
+
+OfferPriceDataImpl_baseOfferPriceData=Fixed Price Discount
+OfferPriceDataImpl_Offer_Price_Data_Id=ID
+OfferPriceDataImpl_Offer=Offer
+OfferPriceDataImpl_Active_Start_Date=Start Date
+OfferPriceDataImpl_Active_End_Date=End Date
+OfferPriceDataImpl_Identifier_Type=Identifier Type
+OfferPriceDataImpl_Identifier_Value=Identifier Value
+OfferPriceDataImpl_Discount_Type=Discount Type
+OfferPriceDataImpl_Amount=Amount
 
 PromotionMessageImpl_basePromotionMessage=Promotion Message
 PromotionMessageImpl_Misc=Miscellaneous
