Added in support for apply offer price data within offer engine

--- a/admin/broadleaf-open-admin-platform/src/main/resources/messages/GeneratedMessagesEntityFramework.properties
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/messages/GeneratedMessagesEntityFramework.properties
@@ -186,6 +186,7 @@ OfferPriceDataImpl_Identifier_Type=Identifier Type
 OfferPriceDataImpl_Identifier_Value=Identifier Value
 OfferPriceDataImpl_Discount_Type=Discount Type
 OfferPriceDataImpl_Amount=Amount
+OfferPriceDataImpl_Quantity=Quantity
 
 PromotionMessageImpl_basePromotionMessage=Promotion Message
 PromotionMessageImpl_Misc=Miscellaneous
